# 64drive_usb

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: ftd2xx.cmake
src/: debug.c  debug.h  device.c  device.h  helper.c  helper.h  image.c  image.h  local.c  local.h  not_windows_haxx.h  upgrade.c  upgrade.h  usb.c  usb.h
src/pkg/: package.h  pkg_cnt.c
